--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,63 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/FoodOrder/customer/node_modules
-FoodOrder/customer/node_modules
-/FoodOrder/customer/.pnp
-FoodOrder/customer/.pnp.js
+/**/node_modules
+**/node_modules
+**/.pnp
+**/.pnp.js
 
-/FoodOrder/customer/.env
-
-# testing
-/FoodOrder/customer/coverage
-
-# production
-/FoodOrder/customer/build
-
-# misc
-/FoodOrder/customer/.DS_Store
-/FoodOrder/customer/.env.local
-/FoodOrder/customer/.env.development.local
-/FoodOrder/customer/.env.test.local
-/FoodOrder/customer/.env.production.local
-
-/FoodOrder/customer/npm-debug.log*
-/FoodOrder/customer/yarn-debug.log*
-/FoodOrder/customer/yarn-error.log*
-
-# dependencies
-/FoodOrder/kitchen/node_modules
-/FoodOrder/kitchen/.pnp
-/FoodOrder/kitchen/.pnp.js
+**/.env
 
 # testing
-/FoodOrder/kitchen/coverage
+**/coverage
 
 # production
-/FoodOrder/kitchen/build
+**/build
 
 # misc
-/FoodOrder/kitchen/.DS_Store
-/FoodOrder/kitchen/.env.local
-/FoodOrder/kitchen/.env.development.local
-/FoodOrder/kitchen/.env.test.local
-/FoodOrder/kitchen/.env.production.local
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
-/FoodOrder/kitchen/npm-debug.log*
-/FoodOrder/kitchen/yarn-debug.log*
-/FoodOrder/kitchen/yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
-/FoodOrder/backend/.idea/
-/FoodOrder/backend/node_modules/
-/FoodOrder/backend/yarn-error.log
-/FoodOrder/backend/.env
-/FoodOrder/backend/db/data/*
-!/FoodOrder/backend/db/data/queries
-/FoodOrder/backend/public
+# # dependencies
+# /FoodOrder/kitchen/node_modules
+# /FoodOrder/kitchen/.pnp
+# /FoodOrder/kitchen/.pnp.js
 
-/FoodOrder/backend/.DS_Store
+# # testing
+# /FoodOrder/kitchen/coverage
 
-.DS_Store
+# # production
+# /FoodOrder/kitchen/build
+
+# # misc
+# /FoodOrder/kitchen/.DS_Store
+# /FoodOrder/kitchen/.env.local
+# /FoodOrder/kitchen/.env.development.local
+# /FoodOrder/kitchen/.env.test.local
+# /FoodOrder/kitchen/.env.production.local
+
+# /FoodOrder/kitchen/npm-debug.log*
+# /FoodOrder/kitchen/yarn-debug.log*
+# /FoodOrder/kitchen/yarn-error.log*
+
+**/.idea/
+**/node_modules/
+**/yarn-error.log
+**/.env
+**/db/data/*
+!**/db/data/queries
+**/public
+
+**/.DS_Store
+
+# .DS_Store
 
 # Logs
 /cvgame/logs
